<resources>
    <string name="app_name">PU Assistant</string>
    <string name="appTitle">PU助手</string>
    <string name="loginHintID">请输入您的学号</string>
    <string name="loginHintPW">请输入您的密码</string>
    <string name="registerHintNick">请输入您的昵称</string>
    <string name="registerHintConfirm">请再次输入您的密码</string>
    <string name="rememberPassword">记住密码</string>
    <string name="modifyPassword">修改密码</string>
    <string name="userID">学号</string>
    <string name="nickname">昵称</string>
    <string name="userPassword">密码</string>
    <string name="confirmPassword">确认密码</string>
    <string name="login">登录</string>
    <string name="register">新用户注册</string>
    <string name="cancel">注销</string>
    <string name="introduction">关于我们</string>
    <string name="back">返回</string>
    <string name="completeRegister">完成注册并登陆</string>
    <string name="completeCancel">完成注销并退出</string>
    <string name="myActivity">活动</string>
    <string name="eligibleActivity">符合条件的活动</string>
    <string name="finding">正在查找</string>
    <string name="addCondition">添加</string>
    <string name="activityCategories">活动类别</string>
    <string name="ownershipGroup">归属组织</string>
    <string name="publicService">公益服务</string>
    <string name="sport">体育竞技</string>
    <string name="innovativeUndertaking">创新创业</string>
    <string name="cultureAndArt">文化艺术</string>
    <string name="ideologicalSocialSciences">思政社科</string>
    <string name="computer">计算机学院</string>
    <string name="mechanical">机械学院</string>
    <string name="chemical">化工学院</string>
    <string name="mathematical">数理学院</string>
    <string name="architecture">建筑学院</string>
    <string name="activityDetails">活动详情</string>
    <string name="activityName">活动名称</string>
    <string name="activitySite">活动地点</string>
    <string name="activitiesDepartments">活动院系</string>
    <string name="activityGrade">活动年级</string>
    <string name="activityTime">活动时间</string>
    <string name="registrationStartStop">报名起止</string>
    <string name="participateCost">参加费用</string>
    <string name="participants">参赛人数</string>
    <string name="remainingQuota">剩余名额</string>
    <string name="contact">联系方式</string>
    <string name="activityProfile">活动简介</string>
    <string name="intruductionText">此APP旨在及时提醒大家申报自己想要参加的PU活动，继而获得相应的PU学分。</string>
    <string-array name="activityCategories">
        <item>不限</item>
        <item>公益服务</item>
        <item>体育竞技</item>
        <item>创新创业</item>
        <item>文化艺术</item>
        <item>思政社科</item>
    </string-array>
    <string-array name="ownershipGroup">
        <item>不限</item>
        <item>计算机学院</item>
        <item>机械学院</item>
        <item>化工学院</item>
        <item>数理学院</item>
        <item>建筑学院</item>
    </string-array>
</resources>
