<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:text="@string/appTitle"
        android:padding="20dp"
        android:textColor="@color/colorTitle"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userID"
                android:padding="10dp"
                android:textSize="35sp"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:id="@+id/loginID"
                android:hint="@string/loginHintID"
                android:ems="10"
                android:textSize="20sp"
                android:inputType="number"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userPassword"
                android:padding="10dp"
                android:textSize="35sp"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:id="@+id/loginPassword"
                android:hint="@string/loginHintPW"
                android:paddingTop="20dp"
                android:ems="20"
                android:textSize="20sp"
                android:inputType="textPassword"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/rememberPassword"
            android:id="@+id/loginRemember"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/register"
            android:id="@+id/register"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="15sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnLogin"
                android:text="@string/login"
                android:textSize="20sp"
                android:background="@color/login"
                android:textColor="@color/text"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/introduction"
            android:id="@+id/introduce"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:textSize="15sp" />
    </RelativeLayout>
</LinearLayout>